--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -130,7 +130,7 @@ Display_IdleWarningMessage=Your browser session is about to timeout.  Please cli
 Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
   words to make them easier to remember, but have been modified to make them difficult to guess.
 
-Tooltip_PasswordStrength=The password strength meter shows how essy it is to guess your<br/> password. \
+Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
   Try the following to make your password stronger:\
   <ul><li>Make the password longer</li>\
   <li>Use mixed (upper and lower case) letters</li>\
