--- a/pwm/servlet/src/password/pwm/config/Message.properties
+++ b/pwm/servlet/src/password/pwm/config/Message.properties
@@ -74,7 +74,7 @@ Success_Unknown=The operation has been successfully completed.
 Success_CreateUser=Your new user account has been successfully created.  Be sure to continue the process, or you will not be able to access your new account.
 Success_ActivateUser=Your user account has been successfully activated.  Be sure to complete the process, or you will not be able to access your account.
 Success_UpdateAttributes=Your user information has been successfully updated.
-Success_ResponsesMeetRules=Responses meet requirements
+Success_ResponsesMeetRules=Responses meet requirements.  Click Save Responses when ready.
 Success_UnlockAccount=Your account has been unlocked.
 
 EventLog_ChangePassword=Change Password
