--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -84,6 +84,11 @@ DESCR_password.change.requireCurrent=If true, the user's current password will b
   password scenarios.  In most cases this is not requried because the user just authenticated to pwm prior to the seeing the change password \
   page.
 
+LABEL_password.showGuide=Show Password Guide
+DEFLT_password.showGuide=true
+DESCR_password.showGuide=If true, the user will see a link and contents containing tips and help to selecting a good password.
+
+
 LABEL_password.showAutoGen=Show Auto Generate Randoms during change
 DEFLT_password.showAutoGen=true
 DESCR_password.showAutoGen=If true, the user will see the auto-generate random password link on the change password screen.
@@ -183,6 +188,18 @@ DESCR_ldap.proxy.username=LDAP Proxy User used by PWM to access the ldap directo
 LABEL_ldap.proxy.password=LDAP Proxy Password
 DEFLT_ldap.proxy.password=password
 DESCR_ldap.proxy.password=The corresponding password of LDAP Proxy User user.
+
+LABEL_ldap.testuser.username=LDAP Test User
+DEFLT_ldap.testuser.username=
+DESCR_ldap.testuser.username=LDAP Test User used by PWM to test access to the ldap directory. \
+ This user should be configured similar to a normal user account with normal access privliges. \
+ PWM will periodically use this account to perform a health check. \
+  <br/><br/>\
+  If this setting is left blank, PWM will not perform periodic health checks,
+
+LABEL_ldap.testuser.password=LDAP Test User Password
+DEFLT_ldap.testuser.password=
+DESCR_ldap.testuser.password=The corresponding password of LDAP Test User user.
 
 LABEL_ldap.proxy.idleTimeout=LDAP Proxy Idle Timeout
 DEFLT_ldap.proxy.idleTimeout=0
@@ -651,6 +668,11 @@ CATEGORY_DESCR_LOGGING=PWM will log events to three different places:\
   If enabled, alerts are sent to the Admin Alert To Address configured in the Email Settings.\
   <br/><br/>\
 
+LABEL_events.healthCheck.interval=Health Check Frequency
+DEFLT_events.healthCheck.interval=60
+DESCR_events.healthCheck.interval=Frequency (in seconds) at which PWM performs a self-health check.  Default is 30 minutes.  A value of \
+  zero will disable the periodic self-health check.
+
 LABEL_events.java.stdoutLevel=Java StdOut Log Level
 DEFLT_events.java.stdoutLevel=INFO
 DESCR_events.java.stdoutLevel=Default Log level for stdout.  Most servlet containers will redirect stdout to \
@@ -754,12 +776,11 @@ DEFLT_challenge.userAttribute=pwmResponseSet
 DESCR_challenge.userAttribute=Attribute to use for response storage when storing to ldap directory.
 REGEX_challenge.userAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
-LABEL_challenge.forceAllRandoms=Force All Random Response Completion
-DEFLT_challenge.forceAllRandoms=false
-DESCR_challenge.forceAllRandoms=If true then the user will be required to complete all configured random \
-  responses at the time of configuration.  If false the user can complete only the minimum number of \
-  configured random responses at the time of the completion.  If this setting is false, and no user-supplied \
-  random responses are required, then PWM will show the user select (drop down) lists for challenge configuration.
+LABEL_challenge.minRandomsSetup=Minimum Random Challenges Required During Setup
+DEFLT_challenge.minRandomsSetup=0
+DESCR_challenge.minRandomsSetup=The minimum number of random questions the user is required to complete during \
+  Response Setup.  If this number is higher then the available randoms, or lower then the minimum required, it will \
+  be adjusted accordingly.  Set to zero to force all available randoms to be configured at time of setup.
 
 LABEL_challenge.allowUnlock=Allow Unlock
 DEFLT_challenge.allowUnlock=true
