--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -1026,7 +1026,7 @@ DEFLT_updateAttributes.writeAttributes=vehicleInformation=pwmUpdated
 DESCR_updateAttributes.writeAttributes=Writes attributes to ldap after a user’s attributes are populated.  Typically \
  this is used to put some searchable indicator on the user object.\
  <br/><br/>\
- format is name=value pair, multiple attributes can be specified by separating with a comma.
+ format is attributeName=value.
 REGEX_updateAttributes.writeAttributes=^[a-zA-Z][a-zA-Z0-9]*=.+$
 
 LABEL_updateAttributes.form=Update Attributes Form
