--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -19,12 +19,48 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
-CATEGORY_LABEL_GENERAL=General
-CATEGORY_DESCR_GENERAL=
+
+
+#*******************************************************************************************#
+#                               User Interface                                              #
+#*******************************************************************************************#
+CATEGORY_LABEL_USER_INTERFACE=User Interface
+CATEGORY_DESCR_USER_INTERFACE=
 
 LABEL_display.applicationTitle=Application Title
 DEFLT_display.applicationTitle=Password Self Service
 DESCR_display.applicationTitle=Name of the application, displayed in the header on each page.
+
+LABEL_password.showAutoGen=Show Auto Generate Randoms
+DEFLT_password.showAutoGen=true
+DESCR_password.showAutoGen=If true, the user will see the auto-generate random password link on the change password screen.
+
+LABEL_password.showStrengthMeter=Show Strength Meter
+DEFLT_password.showStrengthMeter=true
+DESCR_password.showStrengthMeter=If true, the user will see the password strength meter on the change password screen.
+
+LABEL_display.password.guideText=Password Guide Text
+DEFLT_display.password.guideText=
+DESCR_display.password.guideText=Text (with HTML tags/formatting) to show user on password guide page.  This will show up \
+  as a "password guide" link and pop-up dialog.  Leave blank to not show the password guide link.
+
+LABEL_display.password.changeAgreement=Password Change Agreement Message
+DEFLT_display.password.changeAgreement=
+DESCR_display.password.changeAgreement=Message to display to user before being allowed to change password. \
+  If blank, the change password agreement page will not be displayed to the user. \
+  This message may include HTML tags.
+
+LABEL_display.password.changeSuccess=Password Change Success Message
+DEFLT_display.password.changeSuccess=
+DESCR_display.password.changeSuccess=Message to display to user when their password has been changed successfully. \
+  This message may include HTML tags.
+
+
+#*******************************************************************************************#
+#                                   General                                                 #
+#*******************************************************************************************#
+CATEGORY_LABEL_GENERAL=General
+CATEGORY_DESCR_GENERAL=
 
 LABEL_pwm.forwardURL=Forward URL
 DEFLT_pwm.forwardURL=/pwm
@@ -84,20 +120,6 @@ DESCR_password.change.requireCurrent=If true, the user's current password will b
   password scenarios.  In most cases this is not requried because the user just authenticated to pwm prior to the seeing the change password \
   page.
 
-LABEL_password.showGuide=Show Password Guide
-DEFLT_password.showGuide=true
-DESCR_password.showGuide=If true, the user will see a link and contents containing tips and help to selecting a good password.
-
-
-LABEL_password.showAutoGen=Show Auto Generate Randoms during change
-DEFLT_password.showAutoGen=true
-DESCR_password.showAutoGen=If true, the user will see the auto-generate random password link on the change password screen.
-
-LABEL_password.showStrengthMeter=Show Strength Meter during change
-DEFLT_password.showStrengthMeter=true
-DESCR_password.showStrengthMeter=If true, the user will see the password strength meter on the change password screen.
-
-
 LABEL_passwordSyncMinWaitTime=Password Change Minimum Wait Time
 DEFLT_passwordSyncMinWaitTime=5
 DESCR_passwordSyncMinWaitTime=During a password change, PWM will wait for at least this amount of time before forwarding \
@@ -133,17 +155,6 @@ DESCR_pwm.seedlist.location=PWM can generate "friendly" random password suggesti
  complex and meets the configured rules computed for the user.\
  <br/><br/>\
  Setting this to blank will result in suggested passwords being completely randomized.\
-
-LABEL_display.password.changeAgreement=Password Change Agreement Message
-DEFLT_display.password.changeAgreement=
-DESCR_display.password.changeAgreement=Message to display to user before being allowed to change password. \
-  If blank, the change password agreement page will not be displayed to the user. \
-  This message may include HTML tags.
-
-LABEL_display.password.changeSuccess=Password Change Success Message
-DEFLT_display.password.changeSuccess=
-DESCR_display.password.changeSuccess=Message to display to user when their password has been changed successfully. \
-  This message may include HTML tags.
 
 LABEL_google.analytics.tracker=Google Analytics Code
 DEFLT_google.analytics.tracker=
