--- a/pwm/servlet/web/WEB-INF/web.xml
+++ b/pwm/servlet/web/WEB-INF/web.xml
@@ -63,27 +63,7 @@
     </filter>
     <filter-mapping>
         <filter-name>SessionFilter</filter-name>
-        <url-pattern>/jsp/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>SessionFilter</filter-name>
-        <url-pattern>/private/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>SessionFilter</filter-name>
-        <url-pattern>/public/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>SessionFilter</filter-name>
-        <url-pattern>/config/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>SessionFilter</filter-name>
-        <url-pattern>/</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>SessionFilter</filter-name>
-        <url-pattern>*.jsp</url-pattern>
+        <url-pattern>*</url-pattern>
     </filter-mapping>
     <filter-mapping>
         <filter-name>CaptchaFilter</filter-name>
@@ -172,6 +152,15 @@
         <servlet-name>ConfigUploadServlet</servlet-name>
         <servlet-class>password.pwm.servlet.ConfigUploadServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ResourceFileServlet</servlet-name>
+        <servlet-class>password.pwm.servlet.ResourceFileServlet</servlet-class>
+        <init-param>
+            <description>Default HTTP expiration time for resources (in milliseconds)</description>
+            <param-name>expireTimeMs</param-name>
+            <param-value>600000</param-value>
+        </init-param>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/private/Login</url-pattern>
@@ -239,6 +228,10 @@
     <servlet-mapping>
         <servlet-name>ConfigUploadServlet</servlet-name>
         <url-pattern>/config/ConfigUpload</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ResourceFileServlet</servlet-name>
+        <url-pattern>/resources/*</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>5</session-timeout>
