--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -688,7 +688,7 @@ LABEL_events.java.stdoutLevel=Java StdOut Log Level
 DEFLT_events.java.stdoutLevel=INFO
 DESCR_events.java.stdoutLevel=Default Log level for stdout.  Most servlet containers will redirect stdout to \
   a log file.  For example, tomcat logs stdout output to the <i>tomcat/logs/catalina.out</i> file by default.\
-  \ If blank, PWM will not send events to stdout. \
+  If blank, PWM will not send events to stdout. \
  <br/><br>Must be one of the following: <b>TRACE</b>, <b>DEBUG</b>, <b>INFO</b>, <b>WARN</b>, <b>ERROR</b> or <b>FATAL</b>.
 REGEX_events.java.stdoutLevel=^(TRACE|DEBUG|INFO|WARN|ERROR|FATAL)$
 
@@ -752,13 +752,13 @@ LABEL_events.alert.fatalEvent.enable=Fatal Event Admin Alerts
 DEFLT_events.alert.fatalEvent.enable=true
 DESCR_events.alert.fatalEvent.enable=If true, send an alert to the PWM Administrator when a fatal event occurs.
 
-LABEL_events.alert.configModify.enable=Configuration Modifification Admin Alerts
+LABEL_events.alert.configModify.enable=Configuration Modification Admin Alerts
 DEFLT_events.alert.configModify.enable=true
 DESCR_events.alert.configModify.enable=If true, send an email when the configuration has been modified.
 
 LABEL_events.alert.dailyStats.enable=Daily Statistics Admin Alerts
 DEFLT_events.alert.dailyStats.enable=true
-DESCR_events.alert.dailyStats.enable=If true, send an email once a day (at 0:00 GMT to the PWM Administrator with statistics for the day.
+DESCR_events.alert.dailyStats.enable=If true, send an email once a day (at 0:00 GMT) to the PWM Administrator with statistics for the day.
 
 
 #*******************************************************************************************#
