--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -80,6 +80,7 @@ Title_ConfirmResponses=Confirm Password Responses
 Title_UserInformation=User Information
 Title_RandomPasswords=Random Passwords
 Title_PasswordGuide=Password Guide
+Title_ForgottenUsername=Forgotten Username
 
 Display_Login=
 Display_PasswordExpired=Your password has expired.  You must set a new password now.
@@ -131,6 +132,7 @@ Display_IdleWarningTitle=Idle Timeout
 Display_IdleWarningMessage=Your browser session is about to timeout.  Please click anywhere on this page to resume.
 Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
   words to make them easier to remember, but have been modified to make them difficult to guess.
+Display_PasswordPrompt=Please type your new password
 
 Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
   Try the following to make your password stronger:\
