--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -55,6 +55,18 @@ DEFLT_display.password.changeSuccess=
 DESCR_display.password.changeSuccess=Message to display to user when their password has been changed successfully. \
   This message may include HTML tags.
 
+LABEL_display.showHidePasswordFields=Allow Show/Hide Password Fields
+DEFLT_display.showHidePasswordFields=true
+DESCR_display.showHidePasswordFields=Where available, allow the user to toggle the show/hide password field \
+  option.
+
+LABEL_display.showCancelButton=Show Cancel Button
+DEFLT_display.showCancelButton=true
+DESCR_display.showCancelButton=Where appropriate, show a "Cancel" button to user.  Pressing the cancel button will \
+  send the user to the forwardURL (or logoutURL if the password has been modified).  The cancel button will show on \
+  the change password screen only if the password is not expired.  The Cancel button will only show up if the browser \
+  has javaScript enabled.
+
 
 #*******************************************************************************************#
 #                                   General                                                 #
@@ -557,7 +569,7 @@ DESCR_password.policy.changeMessage=Message to be displayed to user during passw
 #*******************************************************************************************#
 #                               eDirectory Settings                                         #
 #*******************************************************************************************#
-CATEGORY_LABEL_EDIRECTORY=eDirectory Settings
+CATEGORY_LABEL_EDIRECTORY=Novell eDirectory
 CATEGORY_DESCR_EDIRECTORY=These settings are only used when Novell eDirectory is the ldap \
  directory service being used.\
 
@@ -583,6 +595,18 @@ DESCR_ldap.edirectory.alwaysUseProxy=Always use proxy user account for ldap conn
  <li>Password change operations are performed using the proxy user connection</li>\
  <li>User grace logins will not be decremented</li></ul>\
  The default setting is false.  You should carefully consider the security impacts before setting this to true.
+
+LABEL_ldap.edirectory.ws.pwdMgtURL=UserApp Password SOAP Service URL
+DEFLT_ldap.edirectory.ws.pwdMgtURL=
+DESCR_ldap.edirectory.ws.pwdMgtURL=If supplied, this setting will change the behavior of the PWM forgotten password function. \
+  Instead of using the PWM stored response set in ldap, PWM will call the Novell UserApp forgotten password web service to discover \
+  the user's stored questions and test the user's responses.  If the forgotten password web service indicates success, PWM \
+  will then forward the user to the change password screen which operates through LDAP.  The web services's "processChgPwd" method \
+  will not be used.<br/><br/>\
+  <i>Example:</i> https://10.1.1.1:8443/IDM/pwdmgt/service\
+  <br/><br/>\
+  <b>Note:</b> A secure (https) URL should be used for security reasons.  You may need to import the HTTPS's certificate into \
+  the java keystore.    
 
 LABEL_ldap.edirectory.readPasswordPolicies=Read Password Policies
 DEFLT_ldap.edirectory.readPasswordPolicies=true
@@ -784,7 +808,9 @@ DESCR_challenge.forceSetup=If true, the user will be directed to configure chall
 
 LABEL_challenge.userAttribute=Response Storage Attribute
 DEFLT_challenge.userAttribute=pwmResponseSet
-DESCR_challenge.userAttribute=Attribute to use for response storage when storing to ldap directory.
+DESCR_challenge.userAttribute=Attribute to use for response storage when storing to ldap directory.  If blank, \
+  a vendor specific response storage method must be configured or else an error will occur when saving responses.
+
 REGEX_challenge.userAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
 LABEL_challenge.minRandomsSetup=Minimum Random Challenges Required During Setup
@@ -902,6 +928,23 @@ LABEL_challenge.token.length=Token Length
 DEFLT_challenge.token.length=6
 DESCR_challenge.token.length=Length of the email token
 
+
+#*******************************************************************************************#
+#                               New User Registration                                       #
+#*******************************************************************************************#
+
+CATEGORY_LABEL_FORGOTTEN_USERNAME=Forgotten Username
+CATEGORY_DESCR_FORGOTTEN_USERNAME=Not yet implemented
+
+LABEL_forgottenUsername.enable=Enable Forgotten Username
+DEFLT_forgottenUsername.enable=false
+DESCR_forgottenUsername.enable=Enable forgotten username registration
+
+LABEL_forgottenUsername.searchFilter=Forgotten Username Search Filter
+DEFLT_forgottenUsername.searchFilter=
+DESCR_forgottenUsername.searchFilter=Enable forgotten username registration
+
+
 #*******************************************************************************************#
 #                               New User Registration                                       #
 #*******************************************************************************************#
@@ -1013,9 +1056,6 @@ DESCR_activateUser.writeAttributes=Writes attributes to ldap after a user is act
 REGEX_activateUser.writeAttributes=^[a-zA-Z][a-zA-Z0-9]*=.+$
 
 
-
-
-
 #*******************************************************************************************#
 #                                Update Attributes                                          #
 #*******************************************************************************************#
@@ -1055,6 +1095,7 @@ DESCR_updateAttributes.form=Update Attributes Form values.\
  <tr><td>confirm</td><td>Field must be confirmed (with a duplicate field)</td></tr>\
  </table>
 REGEX_updateAttributes.form=^[a-zA-Z0-9]+:.+:(text|number|email|password):[0-9]+:[0-9]+:(true|false):(true|false)$
+
 
 #*******************************************************************************************#
 #                                 Shortcut Settings                                         #
