--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -133,6 +133,7 @@ Display_IdleWarningMessage=Your browser session is about to timeout.  Please cli
 Display_PasswordGeneration=The following passwords have been randomly generated for you.  These passwords are based on real \
   words to make them easier to remember, but have been modified to make them difficult to guess.
 Display_PasswordPrompt=Please type your new password
+Display_ResponsesPrompt=Please type your security responses
 
 Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your<br/> password. \
   Try the following to make your password stronger:\
