--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -86,8 +86,8 @@ Error_SessionIntruder=Maximum login attempts for this session have been exceeded
 Error_BadSessionPassword=Unable to establish session password.
 Error_Unauthorized=You do not have permission to perform the requested action.
 Error_BadSession=Unable to establish a session with your browser.  Please close your browser and try again.
-Error_MissingRequiredResponse=One or more required responses are missing.  Please complete all of the required responses.
-Error_MissingRandomResponse=One or more random responses are missing.  Please complete an additional random response.
+Error_MissingRequiredResponse=Please type all of the required responses.
+Error_MissingRandomResponse=Please type an additional random response.
 Error_BadCaptchaResponse=Incorrect verification code, please try again.
 Error_CaptchaAPIError=An error occured while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
 Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
