--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -682,7 +682,7 @@ DESCR_intruder.address.maxAttempts=The maximum number of attempts any user may m
  activities until the reset time interval has passed.\
 
 LABEL_intruder.session.maxAttempts=Session Maximum Attempts
-DEFLT_intruder.session.maxAttempts=5
+DEFLT_intruder.session.maxAttempts=15
 DESCR_intruder.session.maxAttempts=The maximum number of attempts any user may make during a particular browser session. \
  Once this limit is exceeded, it will never reset.  Opening a new browser or waiting for \
  the session idle timeout will get the new user a new session, however.\
@@ -704,8 +704,8 @@ CATEGORY_DESCR_LOGGING=PWM will log events to three different places:\
   <br/><br/>\
 
 LABEL_events.healthCheck.interval=Health Check Frequency
-DEFLT_events.healthCheck.interval=600
-DESCR_events.healthCheck.interval=Frequency (in seconds) at which PWM performs a self-health check.  Default is 10 minutes.  A value of \
+DEFLT_events.healthCheck.interval=3600
+DESCR_events.healthCheck.interval=Frequency (in seconds) at which PWM performs a self-health check.  Default is one hours.  A value of \
   zero will disable the periodic self-health check.
 
 LABEL_events.java.stdoutLevel=Java StdOut Log Level
