--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -89,7 +89,7 @@ Error_BadSession=Unable to establish a session with your browser.  Please close 
 Error_MissingRequiredResponse=Please type all of the required responses.
 Error_MissingRandomResponse=Please type an additional random response.
 Error_BadCaptchaResponse=Incorrect verification code, please try again.
-Error_CaptchaAPIError=An error occured while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
+Error_CaptchaAPIError=An error occurred while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
 Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
 Error_InvalidFormID=Your browser session is invalid or has expired.  Please close your browser and then try again.
 Error_MissingNamingAttr=The naming attribute is missing, please contact your administrator.
