--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -705,7 +705,7 @@ CATEGORY_DESCR_LOGGING=PWM will log events to three different places:\
 
 LABEL_events.healthCheck.interval=Health Check Frequency
 DEFLT_events.healthCheck.interval=3600
-DESCR_events.healthCheck.interval=Frequency (in seconds) at which PWM performs a self-health check.  Default is one hours.  A value of \
+DESCR_events.healthCheck.interval=Frequency (in seconds) at which PWM performs a self-health check.  Default is one hour.  A value of \
   zero will disable the periodic self-health check.
 
 LABEL_events.java.stdoutLevel=Java StdOut Log Level
