--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,8 @@
 #Build Number for ANT. Do not edit!
-#Sun Oct 10 21:04:15 EDT 2010
-build.time=2010.10.10 21\:04\:15 EDT
-build.number=994
+#Fri Oct 22 15:40:43 EDT 2010
+build.time=2010.10.22 15\:40\:43 EDT
+build.number=996
 build.user=J
-pwm.version=1.5.2 devbuild
+pwm.version=1.5.2
 build.java.vendor=Sun Microsystems Inc.
 build.java.version=1.6.0_19
