--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,8 @@
 #Build Number for ANT. Do not edit!
 #Fri Oct 22 15:40:43 EDT 2010
 build.time=2010.10.22 15\:40\:43 EDT
-build.number=996
+build.number=998
 build.user=J
-pwm.version=1.5.2
+pwm.version=1.5.3 devbuild
 build.java.vendor=Sun Microsystems Inc.
 build.java.version=1.6.0_19
