--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -215,7 +215,7 @@ DESCR_ldap.proxy.password=The corresponding password of LDAP Proxy User user.
 LABEL_ldap.testuser.username=LDAP Test User
 DEFLT_ldap.testuser.username=
 DESCR_ldap.testuser.username=LDAP Test User used by PWM to test access to the ldap directory. \
- This user should be configured similar to a normal user account with normal access privliges. \
+ This user should be configured similar to a normal user account with normal access privileges. \
  PWM will periodically use this account to perform a health check. \
   <br/><br/>\
   If this setting is left blank, PWM will not perform periodic health checks,
