--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -703,10 +703,10 @@ CATEGORY_DESCR_LOGGING=PWM will log events to three different places:\
   If enabled, alerts are sent to the Admin Alert To Address configured in the Email Settings.\
   <br/><br/>\
 
-LABEL_events.healthCheck.interval=Health Check Frequency
-DEFLT_events.healthCheck.interval=3600
-DESCR_events.healthCheck.interval=Frequency (in seconds) at which PWM performs a self-health check.  Default is one hour.  A value of \
-  zero will disable the periodic self-health check.
+LABEL_events.healthCheck.minInterval=Health Check Frequency
+DEFLT_events.healthCheck.minInterval=120
+DESCR_events.healthCheck.minInterval=Frequency (in seconds) at which PWM performs a self-health check.  Default is two minutes.\
+  Health Checks only occur when the health check results are being viewed.
 
 LABEL_events.java.stdoutLevel=Java StdOut Log Level
 DEFLT_events.java.stdoutLevel=INFO
