--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -216,13 +216,7 @@ LABEL_ldap.testuser.username=LDAP Test User
 DEFLT_ldap.testuser.username=
 DESCR_ldap.testuser.username=LDAP Test User used by PWM to test access to the ldap directory. \
  This user should be configured similar to a normal user account with normal access privileges. \
- PWM will periodically use this account to perform a health check. \
-  <br/><br/>\
-  If this setting is left blank, PWM will not perform periodic health checks,
-
-LABEL_ldap.testuser.password=LDAP Test User Password
-DEFLT_ldap.testuser.password=
-DESCR_ldap.testuser.password=The corresponding password of LDAP Test User user.
+ PWM will periodically use this account to perform a health check, including changing the accounts password.\
 
 LABEL_ldap.proxy.idleTimeout=LDAP Proxy Idle Timeout
 DEFLT_ldap.proxy.idleTimeout=0
@@ -373,11 +367,11 @@ DEFLT_email.activation.htmlBody={"":"<b>Thank you for activating your account.<\
 DESCR_email.activation.htmlBody=Body of email sent to activagted users.
 
 LABEL_email.challenge.token.subject=Challenge Token Email Subject
-DEFLT_email.challenge.token.subject={"":"Forgotten Password Agent <noreply@example.com>"}
+DEFLT_email.challenge.token.subject={"":"Forgotten Password Information"}
 DESCR_email.challenge.token.subject=Subject of email sent during forgotten password token process.
 
 LABEL_email.challenge.token.from=Challenge Token Email From
-DEFLT_email.challenge.token.from={"":"Forgotten Password Information"}
+DEFLT_email.challenge.token.from={"":"Forgotten Password Agent <noreply@example.com>"}
 DESCR_email.challenge.token.from=From address of email sent during forgotten password token process.
 
 LABEL_email.challenge.token.plainBody=Challenge Token Plaintext Email Body
