--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -20,12 +20,15 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+#==
+#== Configuration Editor UI Localization file
+#==
 
 #*******************************************************************************************#
 #                               User Interface                                              #
 #*******************************************************************************************#
 CATEGORY_LABEL_USER_INTERFACE=User Interface
-CATEGORY_DESCR_USER_INTERFACE=
+CATEGORY_DESCR_USER_INTERFACE=These settings control overall features and displays that are visible to the end user. 
 
 LABEL_display.applicationTitle=Application Title
 DEFLT_display.applicationTitle={"":"Password Self Service"}
@@ -72,7 +75,7 @@ DESCR_display.showCancelButton=Where appropriate, show a "Cancel" button to user
 #                                   General                                                 #
 #*******************************************************************************************#
 CATEGORY_LABEL_GENERAL=General
-CATEGORY_DESCR_GENERAL=
+CATEGORY_DESCR_GENERAL=General settings for PWM.
 
 LABEL_pwm.forwardURL=Forward URL
 DEFLT_pwm.forwardURL=/pwm
@@ -178,7 +181,9 @@ DESCR_google.analytics.tracker=Google tracking cookie code.  Used for Google Ana
 #                                      LDAP                                                 #
 #*******************************************************************************************#
 CATEGORY_LABEL_LDAP=LDAP
-CATEGORY_DESCR_LDAP=
+CATEGORY_DESCR_LDAP=Settings that control PWM's interaction with an LDAP directory.  PWM will auto-detect \
+  the LDAP directory vendor and type.  Vendor specific settings have their own category.
+
 
 LABEL_ldap.serverUrls=LDAP URLs
 DEFLT_ldap.serverUrls=["ldaps:\/\/127.0.0.1:636","ldap:\/\/127.0.0.1:389"]
