--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -424,7 +424,7 @@ DESCR_password.policy.maximumSequentialRepeat=Maximum times any character may be
 
 LABEL_password.policy.allowNumeric=Allow Numeric Characters
 DEFLT_password.policy.allowNumeric=true
-DESCR_password.policy.allowNumeric=Allow numeric characters in password.  Numeric character testing is performed using <a href="http://java.sun.com/j2se/1.5.0/docs/api/java/lang/Character.html#isDigit%28char%29">Character.isDigit()</a>.
+DESCR_password.policy.allowNumeric=Allow numeric characters in password.
 
 LABEL_password.policy.allowFirstCharNumeric=Allow First Character Numeric
 DEFLT_password.policy.allowFirstCharNumeric=true
@@ -444,7 +444,7 @@ DESCR_password.policy.maximumNumeric=Maximum amount of numeric characters requir
 
 LABEL_password.policy.allowSpecial=Allow Special Characters
 DEFLT_password.policy.allowSpecial=true
-DESCR_password.policy.allowSpecial=Allow special (non alpha-numeric) characters in password.  Special character testing is performed using a negative evaluation of <a href="http://java.sun.com/j2se/1.5.0/docs/api/java/lang/Character.html#isLetterOrDigit%28char%29">Character.isLetterOrDigit()</a>.
+DESCR_password.policy.allowSpecial=Allow special (non alpha-numeric) characters in password.
 
 LABEL_password.policy.allowFirstCharSpecial=Allow First Character Special
 DEFLT_password.policy.allowFirstCharSpecial=true
