--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -81,6 +81,20 @@ Title_UserInformation=User Information
 Title_RandomPasswords=Random Passwords
 Title_PasswordGuide=Password Guide
 Title_ForgottenUsername=Forgotten Username
+Title_Admin=Admin
+
+Long_Title_Main_Menu=Password self-service main menu. From here you can change your current password, reset a forgotten password, or perform other related password activities.
+Long_Title_ChangePassword=Change you current password.
+Long_Title_ForgottenPassword=Recover your forgotten password. If you have previously configured your forgotten password responses you will be able to recover a forgotten password.
+Long_Title_SetupResponses=Setup your forgotten password responses. These secret questions will allow you to recover your password if you forget it.
+Long_Title_ActivateUser=Activate a pre-configured account and establish a new password.
+Long_Title_NewUser=Register a new user account.
+Long_Title_UpdateAttributes=Update your user information.
+Long_Title_UserEventHistory=Password event history.
+Long_Title_Shortcuts=Personalized shortcuts.
+Long_Title_UserInformation=Information about your password and password policies.
+Long_Title_Admin=PWM administrative functions
+Long_Title_Logout=Logout of the PWM password self service application.
 
 Display_Login=
 Display_PasswordExpired=Your password has expired.  You must set a new password now.
