--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -55,6 +55,7 @@ Button_Agree=I Agree
 Button_Cancel=Cancel
 Button_More=More
 
+Title_MainPage=Main Menu
 Title_Login=Please Log In
 Title_ChangePassword=Change Password
 Title_SetupResponses=Setup Password Responses
