--- a/pwm/servlet/web/WEB-INF/web.xml
+++ b/pwm/servlet/web/WEB-INF/web.xml
@@ -45,7 +45,11 @@
     </context-param>
     <context-param>
         <param-name>bulkDbLogEventsTest</param-name>
-        <param-value>9999990</param-value>
+        <param-value>0</param-value>
+    </context-param>
+    <context-param>
+        <param-name>knownLocales</param-name>
+        <param-value>en;;;cs;;;de;;;es;;;fr;;;it;;;nl;;;pl;;;pt</param-value>
     </context-param>
     <filter>
         <filter-name>SessionFilter</filter-name>
@@ -260,7 +264,7 @@
         <url-pattern>/resources/*</url-pattern>
     </servlet-mapping>
     <session-config>
-        <session-timeout>20</session-timeout>
+        <session-timeout>5</session-timeout>
     </session-config>
     <jsp-config>
         <taglib>
