--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -293,6 +293,17 @@ DESCR_passwordLastUpdateAttribute=This attribute is used to mark when the passwo
  replication checks, and other processes.
 REGEX_passwordLastUpdateAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
+LABEL_ldap.guidAttribute=Password Update Attribute
+DEFLT_ldap.guidAttribute=pwmGUID
+DESCR_ldap.guidAttribute=This attribute is used by PWM to identity and reference unique users in the LDAP directory.
+REGEX_ldap.guidAttribute=^[a-zA-Z][a-zA-Z0-9]+$
+
+LABEL_ldap.guid.autoAddValue=Auto-Add GUID Value
+DEFLT_ldap.guid.autoAddValue=true
+DESCR_ldap.guid.autoAddValue=If true, PWM will attempt to add a unique GUID value for any user attempting to authenticate \
+  that does not have a value.
+
+
 #*******************************************************************************************#
 #                                        Email                                              #
 #*******************************************************************************************#
@@ -941,10 +952,17 @@ DESCR_command.checkResponses.queryMatch=if the command servlet is called with th
  user's password responses is checked.  If the user does not match this query, then the \
  user's responses will not be checked, and the user will be redirected to the forward URL. \
 
-LABEL_challenge.token.enable=Enable Email Token
+LABEL_challenge.requireResponses=Require Responses
+DEFLT_challenge.requireResponses=true
+DESCR_challenge.requireResponses=If enabled, the user will need to supply previously saved responses in order to proceed with \
+  forgotten password recovery.   If this setting is disabled, then 'Require Email Token' must be set to true for forgotten password \
+  recovery to operate.
+
+LABEL_challenge.token.enable=Require Email Token
 DEFLT_challenge.token.enable=false
 DESCR_challenge.token.enable=If enabled, a token will be emailed to the user during the forgotten password process.  The user \
-  will be required to type the email token in order to proceed to recover their password.
+  will be required to type the email token in order to proceed to recover their password.  If this setting is disabled, then 'Require Responses' must be set \
+  to true for forgotten password recovery to operate.
 
 LABEL_challenge.token.characters=Token Characters
 DEFLT_challenge.token.characters=ABCDEFGHJKLMNPQRSTUVWXY3456789
@@ -1256,7 +1274,7 @@ DESCR_externalRuleMethod=Java classes to call to determine any rule violations o
  Unless your adding custom Java code to PWM, you should leave this blank.
 
 LABEL_disallowedInputs=Disallowed HTTP Inputs
-DEFLT_disallowedInputs=["(?i)<.*script.*>","(?i)<.*xml.*>*","(?i)\\(.*=*\\)*","(?i)<.*img.*>","(?i)<.*src.*>"]
+DEFLT_disallowedInputs=["(?i)<.*script.*>","(?i)<.*xml.*>*","(?i)\\(.*=*\\)*","(?i)<.*img.*>","(?i)<.*src.*>","(?i).*href.*",".*%22.*",".*%3E.*",".*%39.*"]
 DESCR_disallowedInputs=Disallowed values.  If any input values (on any http parameter) matches these patterns, the \
   matching portion will be stripped from the input.
 
