--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,8 @@
 #Build Number for ANT. Do not edit!
-#Sun Jan 16 05:08:07 EST 2011
-build.time=2011.01.16 05\:08\:07 EST
-build.number=1009
-pwm.version=1.5.3 devbuild
+#Sun Jan 30 23:33:07 EST 2011
+build.time=2011.01.30 23\:33\:07 EST
+build.number=1010
 build.user=J
+pwm.version=1.5.3 devbuild-
 build.java.vendor=Sun Microsystems Inc.
-build.java.version=1.6.0_19
+build.java.version=1.5.0_21
