--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -1293,7 +1293,7 @@ LABEL_pwmDb.location=PwmDB Location
 DEFLT_pwmDb.location=pwmDB
 DESCR_pwmDb.location=Location of the pwmDB directory. If the specified path is relative, the path will be considered relative to the servlet's <i>WEB-INF</i> directory.
 
-LABEL_pwmDb.implementation=PwmDB implementation used by the pwmDB.
+LABEL_pwmDb.implementation=PwmDB Implementation Class
 DEFLT_pwmDb.implementation=password.pwm.util.db.Berkeley_PwmDb
 DESCR_pwmDb.implementation=Java class implementation used by PwmDB.  Default is the embedded BerkeleyDB Java Edition.
 
