--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -325,6 +325,12 @@ DEFLT_email.userMailAttribute=mail
 DESCR_email.userMailAttribute=User LDAP attribute containing the user's email address.
 REGEX_email.userMailAttribute=^[a-zA-Z][a-zA-Z0-9]+$
 
+LABEL_email.queueMaxAge=Maximum Email Queue Age
+DEFLT_email.queueMaxAge=3600
+DESCR_email.queueMaxAge=Maximum age (in seconds) an email can wait in the send queue.  If an email is in the send \
+  queue longer than this time, it will be discarded.  Emails only persist in the send queue if there is \
+  an IO or network error to the smtp server while sending the email.
+
 LABEL_email.adminAlert.toAddress=Admin Alert To Address
 DEFLT_email.adminAlert.toAddress=["admin@example.com"]
 DESCR_email.adminAlert.toAddress=During certain events, PWM will send email notifications \
@@ -1234,6 +1240,11 @@ DEFLT_useXForwardedForHeader=true
 DESCR_useXForwardedForHeader=If present, use the X-Forwarded-For HTTP header value as the client IP address instead of \
  the source IP address of the HTTP connection.  X-Forwarded-For headers are typically added by upstream proxies or firewalls \
  and may be the only reliable way to identify the user's source IP address.
+
+LABEL_network.reverseDNS.enable=Enable Reverse DNS
+DEFLT_network.reverseDNS.enable=true
+DESCR_network.reverseDNS.enable=If true, the system's reverse DNS system is used to record the hostnme of the client.  In some cases \
+  this can cause performance issues so it can be disabled if it is not required.
 
 LABEL_allowUrlSessions=Allow URL Sessions
 DEFLT_allowUrlSessions=false
