--- a/pwm/servlet/src/password/pwm/BuildInformation.properties
+++ b/pwm/servlet/src/password/pwm/BuildInformation.properties
@@ -1,8 +1,8 @@
 #Build Number for ANT. Do not edit!
-#Sun Jan 30 23:33:07 EST 2011
-build.time=2011.01.30 23\:33\:07 EST
-build.number=1010
+#Thu Feb 10 21:50:34 EST 2011
+build.time=2011.02.10 21\:50\:34 EST
+build.number=1016
+pwm.version=1.5.3 devbuild
 build.user=J
-pwm.version=1.5.3 devbuild-
 build.java.vendor=Sun Microsystems Inc.
 build.java.version=1.5.0_21
