--- a/pwm/servlet/src/password/pwm/config/PwmSetting.properties
+++ b/pwm/servlet/src/password/pwm/config/PwmSetting.properties
@@ -1285,7 +1285,7 @@ DESCR_externalRuleMethod=Java classes to call to determine any rule violations o
  Unless your adding custom Java code to PWM, you should leave this blank.
 
 LABEL_disallowedInputs=Disallowed HTTP Inputs
-DEFLT_disallowedInputs=["(?i)<.*script.*>","(?i)<.*xml.*>*","(?i)\\(.*=*\\)*","(?i)<.*img.*>","(?i)<.*src.*>","(?i).*href.*",".*%22.*",".*%3E.*",".*%39.*"]
+DEFLT_disallowedInputs=["(?i)<.*script.*>","(?i)<.*xml.*>*","(?i)\\(.*=*\\)*","(?i)<.*img.*>","(?i)<.*src.*>","(?i).*href.*"]
 DESCR_disallowedInputs=Disallowed values.  If any input values (on any http parameter) matches these patterns, the \
   matching portion will be stripped from the input.
 
