--- a/pwm/servlet/src/password/pwm/config/Display.properties
+++ b/pwm/servlet/src/password/pwm/config/Display.properties
@@ -96,6 +96,7 @@ Long_Title_Shortcuts=Personalized shortcuts.
 Long_Title_UserInformation=Information about your password and password policies.
 Long_Title_Admin=PWM administrative functions
 Long_Title_Logout=Logout of the PWM password self service application.
+Long_Title_ForgottenUsername=Find your forgotten username.
 
 Display_Login=
 Display_PasswordExpired=Your password has expired.  You must set a new password now.
