--- a/pwm/servlet/web/WEB-INF/web.xml
+++ b/pwm/servlet/web/WEB-INF/web.xml
@@ -216,6 +216,10 @@
         <url-pattern>/private/SetupResponses</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>ForgottenUsernameServlet</servlet-name>
+        <url-pattern>/public/ForgottenUsername</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>ForgottenPasswordServlet</servlet-name>
         <url-pattern>/public/ForgottenPassword</url-pattern>
     </servlet-mapping>
