--- a/pwm/servlet/src/password/pwm/error/PwmError.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError.properties
@@ -97,6 +97,7 @@ Error_TokenMissingContact=There is no contact information available for your acc
 Error_TokenIncorrect=Incorrect code, please try again.
 Error_BadCurrentPassword=Current password is incorrect, please try again.
 Error_Closing=The operation can not complete because PWM is shutting down.
+Error_Missing_GUID=Unable to locate a GUID for user.  Please contact your administrator.
 
 Error_FieldRequired=%field% is required
 Error_FieldNotANumber=%field% must be a number
